--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/home.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/movie.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/contactus.css" />
+
     <link rel="stylesheet" type="text/css" href="assets/css/colors.css" />
 
     <script src="i6ff/lib/jquery.js"></script>
